Archive2/00/7104837b41fe3f/output
main.cpp:15:11: error: no matching function for call to 'sum'
  cout << sum(a, b) << endl; // this works
          ^~~
main.cpp:6:5: note: candidate function not viable: no known conversion from 'int' to 'int &&' for 1st argument
int sum (int &&a, int &&b)
    ^
1 error generated.
